# template_rpa

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 48fb6104f0aa_criado_tabela_usuarios.py
src/: app.py  main.py  scheduler.py  tasks.py
src/api/: database.py  schemas.py  security.py
src/bots/: bot.py  bot_example.py
src/core/: celery_app.py  env.py  exceptions.py  log.py  paths.py  settings.py  undetec_driver.py  webdriver.py
src/data_processing/: data_processing.py
src/services/: email.py  whatsapp.py
src/utils/: files.py  time.py  xlsx.py
