[project]
name = "Project"
version = "0.1.0"
description = "Template RPA padrão"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "celery>=5.5.3",
    "fastapi[standard]>=0.116.1",
    "flower>=2.0.1",
    "lxml>=6.0.0",
    "msoffcrypto-tool>=5.4.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "psycopg[binary]>=3.2.9",
    "pwdlib[argon2]>=0.2.1",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "selenium>=4.34.2",
    "setuptools>=80.9.0",
    "sqlalchemy[asyncio]>=2.0.43",
    "tqdm>=4.67.1",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
    "xlrd>=2.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-coverage>=0.0",
    "ruff>=0.12.8",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'
asyncio_default_fixture_loop_scope = 'function'

[tool.taskipy.tasks]
lint = 'ruff check'
format = 'ruff format'
run = 'python -m src.main'
pre_test = 'task lint'
test = 'pytest -s -x --cov=src -vv'
post_test = 'coverage html'

[tool.coverage.run]
concurrency = ['thread', 'greenlet']
